--- a/lib/naive_dice_web/templates/event/index.html.eex
+++ b/lib/naive_dice_web/templates/event/index.html.eex
@@ -15,7 +15,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">"<%= event.title %>"</h5>
-        <a href=<%= Routes.event_ticket_path(@conn, :new, event.id) %> class="btn btn-primary">Book now</a>
+        <a href=<%= Routes.event_order_path(@conn, :new, event.id) %> class="btn btn-primary">Book now</a>
       </div>
     </div>
   <% end %>
