--- a/lib/naive_dice_web/templates/order/show.html.eex
+++ b/lib/naive_dice_web/templates/order/show.html.eex
@@ -1,4 +1,4 @@
-<h1>Congratulations <%= @ticket.user_name %>!</h1>
+<h1>Congratulations <%= @user_name %>!</h1>
 
 <p>
     You've been added to the 
