--- a/lib/naive_dice_web/templates/layout/app.html.eex
+++ b/lib/naive_dice_web/templates/layout/app.html.eex
@@ -6,7 +6,7 @@
   </head>
   <body class="bg-light">
     <div role="main" class="container">
-      <%= show_flash(@conn) %>
+      <%= flash_msg(@conn) %>
       <br>
       <br>
       <br>
